--- a/package.json
+++ b/package.json
@@ -20,12 +20,16 @@
     "@emailjs/browser": "^4.4.1",
     "@iconscout/react-unicons": "^2.0.2",
     "@mui/material": "^6.0.0",
+    "@react-pdf-viewer/core": "^3.12.0",
+    "@react-pdf-viewer/default-layout": "^3.12.0",
     "@testing-library/user-event": "^14.5.2",
     "antd": "^5.20.3",
     "apexcharts": "^3.52.0",
     "chart.js": "^4.4.4",
     "framer-motion": "^11.3.30",
+    "jspdf": "^2.5.1",
     "moment": "^2.30.1",
+    "pdf-lib": "^1.17.1",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
@@ -33,6 +37,7 @@
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
+    "react-pdf": "^9.1.0",
     "react-router-dom": "^6.26.1",
     "recharts": "^2.7.2"
   },
