--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "predeploy": "npm run build",
-  "deploy": "gh-pages -d dist"
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@coreui/chartjs": "^4.0.0",
@@ -28,10 +28,13 @@
     "@testing-library/user-event": "^14.5.2",
     "antd": "^5.20.3",
     "apexcharts": "^3.52.0",
-    "chart.js": "^4.4.4",
+    "chart.js": "^4.4.5",
     "framer-motion": "^11.3.30",
+    "install": "^0.13.0",
     "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.8.4",
     "moment": "^2.30.1",
+    "npm": "^10.9.0",
     "pdf-lib": "^1.17.1",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
